compiler/testData/diagnostics/tests/callableReference/function/empty.fir.kt
class A

fun main() {
    val x = :: <!SYNTAX!><!>;
    val y = A::
<!SYNTAX!><!>}
